fixed the overlapping text

--- a/Parallax Scroll-Down effect/style.css
+++ b/Parallax Scroll-Down effect/style.css
@@ -16,7 +16,7 @@ header{
     top: 0;
     left: 0;
     width: 100%;
-    padding: 30px 100px;
+    padding-top: 30px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -35,7 +35,7 @@ section{
     position:relative;
     width:100%;
     height: 100vh;
-    padding: 100px;
+    padding: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
